initial theia with plugin

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-dist/
-node_modules/
-*.theia
-lsp4xml/org.eclipse.lsp4xml-all.jar
+node_modules
+.browser_modules
+
+lib
+*.log
+
+*-app/*
+!*-app/package.json
 yarn.lock
+lsp4xml/org.eclipse.lsp4xml-all.jar
+
+dist/
+*.theia
+.vscode
