--- a/checkerframeworkdemo/tsconfig.json
+++ b/checkerframeworkdemo/tsconfig.json
@@ -1,19 +1,24 @@
 {
     "compilerOptions": {
-        "strict": true,
-        "experimentalDecorators": true,
+        "skipLibCheck": true,
+        "declaration": true,
+        "declarationMap": true,
+        "noImplicitAny": true,
+        "noEmitOnError": false,
+        "noImplicitThis": true,
         "noUnusedLocals": true,
+        "strictNullChecks": true,
+        "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "downlevelIteration": true,
+        "resolveJsonModule": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es6",
+        "target": "es5",
+        "jsx": "react",
         "lib": [
             "es6",
-            
-            
-            "webworker"
-            
+            "dom"
         ],
         "sourceMap": true,
         "rootDir": "src",
