--- a/package.json
+++ b/package.json
@@ -1,65 +1,23 @@
 {
-      "name": "checker-framework-theia",
-      "publisher": "theia",
-      "keywords": [
-        "theia-plugin"
-      ],
-      "version": "0.0.1",
-      "license": "none",
-      
-      "files": [
-        "src"
-      ],
-      "dependencies": {
-        "await-notify": "^1.0.1",
-        "vscode-debugadapter": "^1.32.0"
-      },
-      "devDependencies": {
-        "@theia/plugin": "next",
-        "@theia/plugin-packager": "latest",
-        "rimraf": "2.6.2",
-        "typescript-formatter": "7.2.2",
-        "typescript": "2.9.2"
-      },
-      "scripts": {
-        "prepare": "yarn run clean && yarn run build",
-        "clean": "rimraf lib",
-        "postinstall": "node ./src/download-xml-ls.js",
-        "format-code": "tsfmt -r",
-        "watch": "tsc -watch",
-        "compile": "tsc", 
-        "build": "yarn run format-code && yarn run compile && theia-plugin pack"
-      },
-      "engines": {
-        "theiaPlugin": "next"
-      },
-      "theiaPlugin": {
-          
-          
-            "backend": "lib/checker-framework-theia-backend.js"
-          
-      },
-      "contributes": {
-        "languages": [
-          {
-            "id": "xml",
-            "aliases": [
-              "XML",
-              "xml"
-            ],
-            "extensions": [
-              ".xml"
-            ],
-            "firstLine": "(\\<\\?xml.*)|(\\<svg)|(\\<\\!doctype\\s+svg)",
-            "configuration": "./src/language-configuration.json"
-          }
-        ],
-        "grammars": [
-          {
-            "scopeName": "text.xml",
-            "language": "xml",
-            "path": "./src/xml.tmLanguage.json"
-          }
-        ]
-      }
+  "private": true,
+  "scripts": {
+    "setup": "yarn install --ignore-scripts",
+    "prepare": "yarn run download:plugins && lerna run prepare",
+    "rebuild:browser": "theia rebuild:browser",
+    "rebuild:electron": "theia rebuild:electron",
+    "start:browser": "yarn rebuild:browser && yarn --cwd browser-app start",
+    "start:electron": "yarn rebuild:electron && yarn --cwd electron-app start",
+    "watch": "lerna run --parallel watch",
+    "download:plugins": "theia download:plugins"
+  },
+  "devDependencies": {
+    "lerna": "2.4.0"
+  },
+  "theiaPluginsDir": "plugins",
+  "theiaPlugins": {
+    "vscode-builtin-java": "https://github.com/theia-ide/vscode-builtin-extensions/releases/download/v1.39.1-prel/java-1.39.1-prel.vsix"
+  },
+  "workspaces": [
+    "checkerframeworkdemo", "browser-app", "electron-app"
+  ]
 }
